fixing projects on mobile phone

--- a/style.css
+++ b/style.css
@@ -793,6 +793,8 @@ footer p:nth-child(2){
     }
     .pra p{
         font-size: 26px;
+        padding-bottom: 20px;
+
     }
     body {
         overflow-x: hidden;
